Tweaking token into inputs

--- a/index.html
+++ b/index.html
@@ -282,6 +282,8 @@
             </ul>
         </div>
     </footer>
+    <input type="hidden" id="token-half-1" value="0e29b665aebcc" />
+    <input type="hidden" id="token-half-2" value="97c49ee7a6bd16ad94e86360a73" />
     <script src="./js/main.js"></script>
 </body>
 </html>
